{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 137,
  "lineage": "c085857a-7cca-b139-24cc-7af498fb8a0d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "KingNic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkInterfaces/KingNic",
            "internal_domain_name_suffix": "jdwyiddbb1ze5eqaqad1pfiqlh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/publicIPAddresses/King-ip",
                "subnet_id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/virtualNetworks/KingVnet/subnets/KingSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "KingNic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "KingRG"
          },
          "dependencies": [
            "azurerm_public_ip.King-ip",
            "azurerm_resource_group.KingRG",
            "azurerm_subnet.KingSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "KingCo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkInterfaces/KingNic|/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkSecurityGroups/KingNSG",
            "network_interface_id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkInterfaces/KingNic",
            "network_security_group_id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkSecurityGroups/KingNSG"
          },
          "dependencies": [
            "azurerm_network_interface.KingNic",
            "azurerm_network_security_group.KingNSG",
            "azurerm_public_ip.King-ip",
            "azurerm_resource_group.KingRG",
            "azurerm_subnet.KingSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "KingNSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkSecurityGroups/KingNSG",
            "location": "eastus",
            "name": "KingNSG",
            "resource_group_name": "KingRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkSecurityGroups/KingNSG/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "KingNSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "KingRG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.KingNSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/networkSecurityGroups/KingNSG/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "KingNSG",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "KingRG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.KingNSG",
            "azurerm_resource_group.KingRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "King-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/publicIPAddresses/King-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.71.188.142",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "King-ip",
            "resource_group_name": "KingRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "KingSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/virtualNetworks/KingVnet/subnets/KingSubnet",
            "name": "KingSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "KingRG",
            "virtual_network_name": "KingVnet"
          },
          "dependencies": [
            "azurerm_resource_group.KingRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "KingVnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0c84ed48-0e61-4ff2-9200-8007b795105f",
            "id": "/subscriptions/70faaaeb-e126-4ca7-95be-9e614709f37b/resourceGroups/KingRG/providers/Microsoft.Network/virtualNetworks/KingVnet",
            "location": "eastus",
            "name": "KingVnet",
            "resource_group_name": "KingRG"
          }
        }
      ]
    }
  ]
}